<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ResistorReader</string>
    <string name="action_settings">Settings</string>
    <string name="def_hint">hint</string>
    <string name="range_hint">(0.0)</string>
    <string name="output_hint">0</string>
    <string name="tolerance_hint">10.0</string>
    <string name="ohm">Ω</string>
    <string name= "x1"><font fgcolor="#ffff0000">X</font></string>
    <string name= "x2"><font fgcolor="#ffff0000">X</font></string>
    <string name="blank"></string>
    <string name="percent">%</string>
    <string name="img_desc">Image of Resistor</string>
    
    <color name="gray1">#FFEAEAEA</color>
    <color name="gray2">#FFD7D7D7</color>
    <color name="gray3">#FFBEBEBE</color>
    <color name="gray4">#FF616161</color>
    
    <color name="black">#FF000000</color>
    <color name="brown">#FFCC6600</color>
    <color name="red">#FFFF0000</color>
    <color name="orange">#FFFF6600</color>
    <color name="yellow">#FFFFFF00</color>
    <color name="green">#FF66CC33</color>
    <color name="blue">#FF0066CC</color>
    <color name="violet">#FF9900CC</color>
    <color name="gray">#FF666666</color>
    <color name="white">#FFFFFFFF</color>
    
    <color name="gold">#FFFFCC00</color>
    <color name="silver">#FFCCCCCC</color>
    
    <color name="androidBlack">#FF1D1D1D</color>
    <color name="androidBrown">#FF43140F</color>
    <color name="androidRed">#FFFF4444</color>
    <color name="androidOrange">#FFFF8800</color>
    <color name="androidYellow">#FFFFFF4E</color>
    <color name="androidGreen">#FF99CC00</color>
    <color name="androidBlue">#FF33B5E5</color>
    <color name="androidPurple">#FFAA66CC</color>
    <color name="androidGray">#FFA6A6A6</color>
    <color name="androidWhite">#FFFBFBFB</color>
    
    <integer-array name="firstColors">
        <item>0xFF43140F</item>
        <item>0xFFFF4444</item>
        <item>0xFFFF8800</item>
        <item>0xFFFFFF4E</item>
        <item>0xFF99CC00</item>
        <item>0xFF33B5E5</item>
        <item>0xFFAA66CC</item>
        <item>0xFFA6A6A6</item>
        <item>0xFFFBFBFB</item>
    </integer-array>
    
    <integer-array name="valColors">
        <item>0xFF1D1D1D</item>
        <item>0xFF43140F</item>
        <item>0xFFFF4444</item>
        <item>0xFFFF8800</item>
        <item>0xFFFFFF4E</item>
        <item>0xFF99CC00</item>
        <item>0xFF33B5E5</item>
        <item>0xFFAA66CC</item>
        <item>0xFFA6A6A6</item>
        <item>0xFFFBFBFB</item>
    </integer-array>
    
    <integer-array name="multColors">
        <item>0xFFCCCCCC</item>
        <item>0xFFFFCC00</item>
        <item>0xFF1D1D1D</item>
        <item>0xFF43140F</item>
        <item>0xFFFF4444</item>
        <item>0xFFFF8800</item>
        <item>0xFFFFFF4E</item>
        <item>0xFF99CC00</item>
        <item>0xFF33B5E5</item>
        <item>0xFFAA66CC</item>
    </integer-array>
    
    <integer-array name="multColorsFive">
        <item>0xFFCCCCCC</item>
        <item>0xFFFFCC00</item>
        <item>0xFF1D1D1D</item>
        <item>0xFF43140F</item>
        <item>0xFFFF4444</item>
        <item>0xFFFF8800</item>
        <item>0xFFFFFF4E</item>
        <item>0xFF99CC00</item>
        <item>0xFF33B5E5</item> 
    </integer-array>
    
    <integer-array name="tolColors">
        <item>0xFFCCCCCC</item>
        <item>0xFFFFCC00</item>
        <item>0xFF43140F</item>
        <item>0xFFFF4444</item>
        <item>0xFF99CC00</item>
        <item>0xFF33B5E5</item>
        <item>0xFFAA66CC</item>
    </integer-array>
    
    <integer-array name="tempColors">
        <item>0xFF43140F</item>
        <item>0xFFFF4444</item>
        <item>0xFFFF8800</item>
        <item>0xFFFFFF4E</item>
    </integer-array>

</resources>