<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom|center_horizontal"
    android:background="@drawable/background" >

    <FrameLayout
        android:id="@+id/FL_holder"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0sp" >
    
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            
            <ImageView
                android:id="@+id/resistorImg"
                android:layout_width="200sp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/img_desc"
                android:src="@drawable/resistor" />
       
        </RelativeLayout> 
        <RelativeLayout
            android:id="@+id/band_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
    
            <org.taptwo.android.widget.ViewFlow
                android:id="@+id/band1"
                android:layout_width="158sp"
                android:layout_height="40sp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="104dp"
                android:duplicateParentState="true" />
        
            <org.taptwo.android.widget.ViewFlow
                android:id="@+id/band2"
                android:layout_width="158sp"
                android:layout_height="40sp"
                android:layout_alignLeft="@+id/band1"
                android:layout_below="@+id/band1"
                android:layout_marginTop="10sp"
                android:duplicateParentState="true" />
            
            <org.taptwo.android.widget.ViewFlow
                android:id="@+id/multiplier"
                android:layout_width="158sp"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:layout_alignLeft="@+id/band2"
                android:layout_below="@+id/band2"
                android:duplicateParentState="true" />
        
            <org.taptwo.android.widget.ViewFlow
                android:id="@+id/tolerance"
                android:layout_width="158sp"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:layout_alignLeft="@+id/multiplier"
                android:layout_below="@+id/multiplier"
                android:duplicateParentState="true" />
        
        </RelativeLayout>

    </FrameLayout>
    <LinearLayout
            android:id="@+id/LL_outputholder"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
            
        <LinearLayout
            android:id="@+id/LL_resistance"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp" >
            
            <EditText
                android:id="@+id/output_value"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:hint="@string/output_hint"
                android:textSize="40sp" />
    
            <TextView
                android:id="@+id/ohm"
                android:text="@string/ohm"
                android:textIsSelectable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:gravity="center"
                android:textColor="@color/androidBlue"
                android:textSize="40sp" />
        
        </LinearLayout>
    
        <LinearLayout
            android:id="@+id/LL_tolerance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >
    
            <TextView
                android:id="@+id/lower_bound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/range_hint"
                android:textIsSelectable="false"
                android:textColor="@color/androidBlue"
                android:textSize="25sp" />
    
            <EditText
                android:id="@+id/tolerance_output"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:gravity="center"
                android:hint="@string/tolerance_hint"
                android:textSize="30sp" />
            
            <TextView
                android:id="@+id/percent"
                android:text="@string/percent"
                android:textIsSelectable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="8sp"
                android:textColor="@color/androidBlue"
                android:textSize="30sp" />
    
            <TextView
                android:id="@+id/upper_bound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/range_hint"
                android:textIsSelectable="false"
                android:textColor="@color/androidBlue"
                android:textSize="25sp" />
            
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
